unpackaged/main/default/objects/Case/fields/Account_Phone_number__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone_number__c</fullName>
    <label>Account Phone number</label>
    <type>Phone</type>
</CustomField>