unpackaged/main/default/objects/Case/fields/Assignedto__c.field-meta.xml
<CustomField>
    <fullName>Assignedto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>