unpackaged/main/default/objects/Case/fields/AssignedToMe__c.field-meta.xml
<CustomField>
    <fullName>AssignedToMe__c</fullName>
    <formula>$User.Id =  Assignedto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To me</label>
    <type>Checkbox</type>
</CustomField>