unpackaged/main/default/objects/Case/fields/Bid_received_date__c.field-meta.xml
<CustomField>
    <fullName>Bid_received_date__c</fullName>
    <label>Bid received date</label>
    <type>DateTime</type>
</CustomField>