unpackaged/main/default/objects/Case/fields/Bid_Response_date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Response_date__c</fullName>
    <label>Bid Response date</label>
    <type>DateTime</type>
</CustomField>