unpackaged/main/default/objects/Case/fields/Bid_status__c.field-meta.xml
<CustomField>
    <fullName>Bid_status__c</fullName>
    <label>Bid status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>KO</fullName>
            </value>
            <value>
                <fullName>Waiting the Go/No-go decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>