unpackaged/main/default/objects/Case/fields/Bidmanager_in_charge__c.field-meta.xml
<CustomField>
    <fullName>Bidmanager_in_charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bid Manager in charge</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>