unpackaged/main/default/objects/Case/fields/Case_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Case_Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line</valueSetName>
    </valueSet>
</CustomField>