unpackaged/main/default/objects/Case/fields/CaseExpertise__c.field-meta.xml
<CustomField>
    <fullName>CaseExpertise__c</fullName>
    <label>Expertise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Expertise</valueSetName>
    </valueSet>
</CustomField>