unpackaged/main/default/objects/Case/fields/Customer_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Customer_Deadline__c</fullName>
    <label>Customer Deadline</label>
    <type>DateTime</type>
</CustomField>