unpackaged/main/default/objects/Case/fields/Expertise__c.field-meta.xml
<CustomField>
    <fullName>Expertise__c</fullName>
    <formula>CASE (TEXT(Opportunity__r.Expertise__c), 
						"110","CPA",
						"350","ERP High",
						"340","ERP Middle",
						"320","HCM",
						"200","Retail",
						"100","SMB",
						"310","TAX",
						""
						)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Expertise</label>
    <type>Text</type>
</CustomField>