unpackaged/main/default/objects/Case/fields/Increase_Type__c.field-meta.xml
<CustomField>
    <fullName>Increase_Type__c</fullName>
    <label>Increase Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Increase_Type</valueSetName>
    </valueSet>
</CustomField>