unpackaged/main/default/objects/Case/fields/Internal_Deadline_RFP_Questions_for_Cust__c.field-meta.xml
<CustomField>
    <fullName>Internal_Deadline_RFP_Questions_for_Cust__c</fullName>
    <label>Internal Deadline RFP Questions for Cust</label>
    <type>DateTime</type>
</CustomField>