unpackaged/main/default/objects/Case/fields/Internal_Deadline_RFP_Response__c.field-meta.xml
<CustomField>
    <fullName>Internal_Deadline_RFP_Response__c</fullName>
    <label>Internal Deadline RFP Response</label>
    <type>DateTime</type>
</CustomField>