unpackaged/main/default/objects/Case/fields/Language_of_presentation__c.field-meta.xml
<CustomField>
    <fullName>Language_of_presentation__c</fullName>
    <label>Language of presentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language_ISO</valueSetName>
    </valueSet>
</CustomField>