unpackaged/main/default/objects/Case/fields/New_Increase_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Increase_Type__c</fullName>
    <label>Increase Type to be created</label>
    <length>245</length>
    <type>Text</type>
</CustomField>