unpackaged/main/default/objects/Case/fields/Old_Offer_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Old_Offer_Product_Line__c</fullName>
    <label>Old Offer (Product Line)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line</valueSetName>
    </valueSet>
</CustomField>