unpackaged/main/default/objects/Case/fields/Payment_Date_Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date_Calculation_Method__c</fullName>
    <label>Payment Date Calculation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Date_Calculation_Method</valueSetName>
    </valueSet>
</CustomField>