unpackaged/main/default/objects/Case/fields/Place_of_presentation__c.field-meta.xml
<CustomField>
    <fullName>Place_of_presentation__c</fullName>
    <label>Place of presentation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>