unpackaged/main/default/objects/Case/fields/Presales_Contributor__c.field-meta.xml
<CustomField>
    <fullName>Presales_Contributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Presales Contributor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>