unpackaged/main/default/objects/Case/fields/Reject_Cause__c.field-meta.xml
<CustomField>
    <fullName>Reject_Cause__c</fullName>
    <label>Reject Cause</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete Data</fullName>
            </value>
            <value>
                <fullName>Cancellation by the client</fullName>
            </value>
            <value>
                <fullName>Lost opportunity</fullName>
            </value>
            <value>
                <fullName>Price Too Low</fullName>
            </value>
            <value>
                <fullName>Framework Contract Conflict with Parent Company</fullName>
            </value>
            <value>
                <fullName>No project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>