unpackaged/main/default/objects/Case/fields/Requested_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Start_Date__c</fullName>
    <label>Requested Start Date</label>
    <type>DateTime</type>
</CustomField>