unpackaged/main/default/objects/Case/fields/Targeted_Exceptional_Date__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Exceptional_Date__c</fullName>
    <label>Targeted Exceptional Date</label>
    <type>Date</type>
</CustomField>