unpackaged/main/default/objects/Case/fields/Tech_BillingAccountName__c.field-meta.xml
<CustomField>
    <fullName>Tech_BillingAccountName__c</fullName>
    <formula>Quote__r.Billing_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_BillingAccountName</label>
    <type>Text</type>
</CustomField>