unpackaged/main/default/objects/Case/fields/Tech_BillingAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>Tech_BillingAccountNumber__c</fullName>
    <formula>Quote__r.Billing_Account__r.ERP_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_BillingAccountNumber</label>
    <type>Text</type>
</CustomField>