unpackaged/main/default/objects/Case/fields/Tech_OrderingAccountName__c.field-meta.xml
<CustomField>
    <fullName>Tech_OrderingAccountName__c</fullName>
    <formula>Quote__r.OrderingAccountId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_OrderingAccountName</label>
    <type>Text</type>
</CustomField>