unpackaged/main/default/objects/Case/fields/Tech_OrderingAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>Tech_OrderingAccountNumber__c</fullName>
    <formula>Quote__r.OrderingAccountId__r.ERP_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_OrderingAccountNumber</label>
    <type>Text</type>
</CustomField>