unpackaged/main/default/objects/Case/fields/TECH_type__c.field-meta.xml
<CustomField>
    <fullName>TECH_type__c</fullName>
    <label>TECH type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>