unpackaged/main/default/objects/Case/recordTypes/Internal_Request.recordType-meta.xml
<RecordType>
    <fullName>Internal_Request</fullName>
    <active>true</active>
    <businessProcess>Exceptional Date Request</businessProcess>
    <label>Internal Request</label>
</RecordType>