unpackaged/main/default/objects/Case/recordTypes/Particular_Conditions_Request.recordType-meta.xml
<RecordType>
    <fullName>Particular_Conditions_Request</fullName>
    <active>true</active>
    <businessProcess>Exceptional Date Request</businessProcess>
    <label>Particular Conditions Request</label>
</RecordType>