unpackaged/main/default/objects/Case/recordTypes/PreSales_Request.recordType-meta.xml
<RecordType>
    <fullName>PreSales_Request</fullName>
    <active>true</active>
    <businessProcess>PreSales Request</businessProcess>
    <label>PreSales Request</label>
</RecordType>