unpackaged/main/default/objects/Case/recordTypes/Professional_Services_Request.recordType-meta.xml
<RecordType>
    <fullName>Professional_Services_Request</fullName>
    <active>true</active>
    <businessProcess>Professional Services Request</businessProcess>
    <label>Professional Services Request</label>
</RecordType>