unpackaged/main/default/objects/Case/recordTypes/PS_additional_order.recordType-meta.xml
<RecordType>
    <fullName>PS_additional_order</fullName>
    <active>true</active>
    <businessProcess>Case_PSAdditionalOrder</businessProcess>
    <label>Professional Services - Additional Order</label>
</RecordType>