unpackaged/main/default/objects/Case/recordTypes/Quote_Approval_Request.recordType-meta.xml
<RecordType>
    <fullName>Quote_Approval_Request</fullName>
    <active>true</active>
    <businessProcess>Quote Approval Request</businessProcess>
    <label>Quote Approval Request</label>
</RecordType>