unpackaged/main/default/objects/Case/validationRules/Case_PS_RestrictStatusUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_PS_RestrictStatusUpdate</fullName>
    <active>true</active>
    <description>You can't update status other than "to be assigned" if assigned to field is empty.</description>
    <errorConditionFormula>AND( NOT($User.BypassVR__c), 
				RecordType.DeveloperName="Professional_Services_Request",  
				ISCHANGED(Status),  
				NOT(OR(ISPICKVAL(Status,"To be assigned")
											,ISPICKVAL(Status,"Revoked")
										)
							),   
				ISBLANK(Assignedto__c) 
			)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>You can't update status other than "to be assigned" if assigned to field is empty.</errorMessage>
</ValidationRule>