unpackaged/main/default/objects/Case/validationRules/Control_on_case_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Control_on_case_fields</fullName>
    <active>true</active>
    <description>Prevent fields from being modified by a user who's not the case owner or the opportunity owner or system admin.</description>
    <errorConditionFormula>AND(

OR(
ISCHANGED( Location__c ),
ISCHANGED( Place_of_presentation__c ),
ISCHANGED( Language_of_presentation__c ),
ISCHANGED( Internal_Deadline_RFP_Questions_for_Cust__c ),
ISCHANGED( Internal_Deadline_RFP_Response__c ),
ISCHANGED( Customer_Deadline__c ),
ISCHANGED( Bidmanager_in_charge__c ),
ISCHANGED( Bid_status__c ),
ISCHANGED( Bid_received_date__c ),
ISCHANGED( Bid_Response_date__c ),
ISCHANGED( Presales_Contributor__c  )
),

AND (
$User.Id &lt;&gt; OwnerId,
$User.Id &lt;&gt; Opportunity__r.Owner.Id,
$User.Id &lt;&gt; Bidmanager_in_charge__r.Id,
$User.Id &lt;&gt; Presales_Contributor__r.Id,
$User.Id &lt;&gt; Assignedto__r.Id,
Owner:Queue.QueueName   &lt;&gt; 'PreSales Cases',
Owner:Queue.QueueName   &lt;&gt; 'PreSales CPA',
Owner:Queue.QueueName   &lt;&gt; 'PreSales Education',
Owner:Queue.QueueName   &lt;&gt; 'PreSales ERP High',
Owner:Queue.QueueName   &lt;&gt; 'PreSales ERP Middle',
Owner:Queue.QueueName   &lt;&gt; 'PreSales HCM',
Owner:Queue.QueueName   &lt;&gt; 'PreSales Portail TPE',
Owner:Queue.QueueName   &lt;&gt; 'PreSales Retail',
Owner:Queue.QueueName   &lt;&gt; 'PreSales SMB',
Owner:Queue.QueueName   &lt;&gt; 'PreSales TAX',
$Profile.Name &lt;&gt; "System Administrator" 
)

)</errorConditionFormula>
    <errorMessage>You cannot modify this field.</errorMessage>
</ValidationRule>