unpackaged/main/default/objects/Case/validationRules/VR_Case_001_RejectCause.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Case_001_RejectCause</fullName>
    <active>true</active>
    <description>Reject Cause Mandatory when Rejected</description>
    <errorConditionFormula>AND (
				NOT( $User.BypassVR__c), 
				NOT(INCLUDES( $User.List_of_VR_to_By_Pass__c,"VR_Case_001_RejectCause")), 
				ISPICKVAL( Status, "Rejected"), 
				ISBLANK (TEXT( Reject_Cause__c ))
				)</errorConditionFormula>
    <errorDisplayField>Reject_Cause__c</errorDisplayField>
    <errorMessage>Please indicate a reject cause.</errorMessage>
</ValidationRule>