unpackaged/main/default/objects/Case/listViews/Cases_traiter.listView-meta.xml
<ListView>
    <fullName>Cases_traiter</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Quote__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Assignedto__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AssignedToMe__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed,Rejected</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Professional_Services_Request</value>
    </filters>
    <label>Cases à traiter</label>
</ListView>