unpackaged/main/default/objects/Case/listViews/Legal_Billing_Plan_Case.listView-meta.xml
<ListView>
    <fullName>Legal_Billing_Plan_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Legal - Billing Plan</label>
    <queue>Legal_Billing_Plan</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>