unpackaged/main/default/objects/Case/listViews/Legal_Validators_Case.listView-meta.xml
<ListView>
    <fullName>Legal_Validators_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Legal Validators</label>
    <queue>Legal_Validators</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>