unpackaged/main/default/objects/Case/listViews/PreSales_Cases_Case.listView-meta.xml
<ListView>
    <fullName>PreSales_Cases_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>PreSales Cases</label>
    <queue>PreSales_Cases</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>