unpackaged/main/default/objects/Case/listViews/PreSales_CPA_Case.listView-meta.xml
<ListView>
    <fullName>PreSales_CPA_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>PreSales CPA</label>
    <queue>PreSales_CPA</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>