unpackaged/main/default/objects/Case/listViews/PreSales_Education_Case.listView-meta.xml
<ListView>
    <fullName>PreSales_Education_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>PreSales Education</label>
    <queue>PreSales_Education</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>