unpackaged/main/default/objects/Case/listViews/PreSales_ERP_High_Case.listView-meta.xml
<ListView>
    <fullName>PreSales_ERP_High_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>PreSales ERP High</label>
    <queue>PreSales_ERP_High</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>