unpackaged/main/default/objects/Case/listViews/PreSales_ERP_Middle_Case.listView-meta.xml
<ListView>
    <fullName>PreSales_ERP_Middle_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>PreSales ERP Middle</label>
    <queue>PreSales_ERP_Middle</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>