unpackaged/main/default/objects/Case/listViews/PreSales_HCM_Case.listView-meta.xml
<ListView>
    <fullName>PreSales_HCM_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>PreSales HCM</label>
    <queue>PreSales_HCM</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>