unpackaged/main/default/objects/Case/listViews/PreSales_Portail_TPE_Case.listView-meta.xml
<ListView>
    <fullName>PreSales_Portail_TPE_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>PreSales Portail TPE</label>
    <queue>PreSales_Portail_TPE</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>