unpackaged/main/default/objects/Case/listViews/PreSales_Retail_Case.listView-meta.xml
<ListView>
    <fullName>PreSales_Retail_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>PreSales Retail</label>
    <queue>PreSales_Retail</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>