unpackaged/main/default/objects/Case/listViews/PreSales_SMB_Case.listView-meta.xml
<ListView>
    <fullName>PreSales_SMB_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>PreSales SMB</label>
    <queue>PreSales_SMB</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>